<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/birumuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/image_regis" />

    <TextView
        android:id="@+id/txtjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJdl2"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp" />

    <!-- CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtjudul"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Username -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nametext"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nametext2"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:background="@drawable/costum_regis"
                android:inputType="text" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Etext"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Etext1"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:background="@drawable/costum_regis"
                android:inputType="textEmailAddress" />

            <!-- Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ptext"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Ptext1"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:background="@drawable/costum_regis"
                android:inputType="textPassword" />

            <!-- Konfirmasi Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passtext"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passtext2"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:background="@drawable/costum_regis"
                android:inputType="textPassword" />

            <!-- Button Register -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regisbtn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/biru"
                android:textColor="@color/white"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/biruterang"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
