<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <ImageView
        android:id="@+id/img2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-26dp"
        android:src="@drawable/bg2"/>

    <ImageView
        android:id="@+id/img3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-19dp"
        android:src="@drawable/bg1"/>

    <ImageView
        android:id="@+id/img1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/reset_password" />

    <TextView
        android:id="@+id/teksforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/textforgot"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/biruterang"
        android:fontFamily="sans-serif-condensed" />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teksforgot"
        android:layout_marginTop="10dp"
        android:padding="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Etext"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Etext1"
            android:padding="12dp"
            android:background="@drawable/costum"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/btnLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textforgot1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/biru"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtbacklogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textforgot2"
            android:textColor="@color/biruterang"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
